# pigskinjelly

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
build_support/cmake/: LCOV.cmake  findLLVMTools.cmake
src/: CMakeLists.txt
src/datastructures/: ACAutomaton_test.cc  BinHeap_test.cc  Dequeue.cc
src/problems/: 1007.行相等的最少多米诺旋转.cpp  1128.等价多米诺骨牌对的数量.cpp  1154_lc_test.cc  1267_lc_test.cc  1295.统计位数为偶数的数字.cpp  1343.大小为-k-且平均值大于等于阈值的子数组数目.cpp  1399.统计最大组的数目.cpp  1456.定长子串中元音的最大数目.cpp  1512.好数对的数目.cpp  1534.统计好三元组.cpp  1550.存在连续三个奇数的数组.cpp  1920.基于排列构建数组.cpp  1922.统计好数字的数目.cpp  2090.半径为-k-的子数组平均值.cpp  2145.统计隐藏数组数目.cpp  2176.统计数组中相等且可以被整除的数对.cpp  2179.统计数组中好三元组数目.cpp  2182_lc_test.cc  228_lc_test.cc  2302.统计得分小于-k-的子数组数目.cpp  2364.统计坏数对的数目.cpp  2379.得到-k-个黑块的最少涂色次数.cpp  2461.长度为-k-子数组中的最大和.cpp  2537.统计好子数组的数目.cpp  2841.几乎唯一子数组的最大和.cpp  2843.统计对称整数的数目.cpp  2918.数组的最小相等和.cpp  2999.统计强大整数的数目.cpp  303.区域和检索-数组不可变.cpp  307.区域和检索-数组可修改.cpp  3272.统计好整数的数目.cpp  3341.到达最后一个房间的最少时间-i.cpp  3342.到达最后一个房间的最少时间-ii.cpp  3354.使数组元素等于零.cpp  3375.使数组的值全部为-k-的最少操作次数.cpp  3392.统计符合条件长度为-3-的子数组数目.cpp  3396.使数组元素互不相同所需的最少操作次数.cpp  416.分割等和子集.cpp  643.子数组最大平均数-i.cpp  781.森林中的兔子.cpp  (+5 more)
src/semantics/: SFAINE_test.cc  hello_world_test.cc
